# gs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/gs/: event.h
include/gs/core/: core.h  platform.h
include/gs/loader/: api.h  lib.h
include/gs/loader/api/: v2.h  v3.h  v4.h  v6.h
include/gs/nt/: api.h  pebteb.h  ps.h  rtl.h  status.h
include/gs/pe/: pe.h
include/gs/util/: arena.h  buffer.h  list.h  serializer.h  string.h  test.h  wstring.h
src/cli/: main.c
src/gs/loader/: api.c  lib.c
src/gs/loader/api/: v2.c  v3.c  v4.c  v6.c
src/gs/pe/: pe.c
src/gs/util/: arena.c  buffer.c  list.c  serializer.c  string.c  wstring.c
src/test/: event.cpp
test/: CMakeLists.txt
test/gs/util/: arena.c  buffer.c  list.c  string.c  wstring.c
